--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "eslint": "^9.36.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
     "nodemon": "^3.1.10",
